Remove toggle key and make the reset key do the toggle instead

--- a/infzoom/infzoom.ini
+++ b/infzoom/infzoom.ini
@@ -11,12 +11,6 @@
 monitor = 0
 always_on_top = true
 
-# when the "reset" hotkey is pressed, it should switch between normal mode and:
-# 1 = 1p zoom
-# 2 = 2p zoom
-# 3 = dp zoom
-toggle_target = 1
-
 #
 # Zoom
 #
@@ -88,7 +82,7 @@ dp_mod = 0
 dp_key = 0x72
 
 # normal: reset zoom to normal view. Default: F5
-# press again to switch back to toggle_target
+#         press again to switch back to previous mode
 normal_mod = 0
 normal_key = 0x74
 
